--- a/styles_careers.css
+++ b/styles_careers.css
@@ -20,7 +20,7 @@ h2 {
   border-radius: 10px;
   padding: 20px;
   margin: 30px 0;
-  background-color: #0f0f16;
+  background-color: black;
 }
 
 .card h3 {
