Updated what we do

--- a/style_sample_1.css
+++ b/style_sample_1.css
@@ -207,7 +207,7 @@ z-index: 2;
 /* MOU PART */
 /* ======================= WHAT WE DO SECTION ======================= */
 section.what-section {
-background-color: #212529;
+background-color: #141414E6;
 padding: 60px 0;
 position: relative;
 z-index: 40;
