--- a/styles_careers.css
+++ b/styles_careers.css
@@ -80,15 +80,15 @@ h1 {
   font-size: 52px;
   font-weight: bold;
   letter-spacing: 1px;
-  color: #ffc46b;
-  text-shadow: 0 0 12px rgba(255, 196, 107, 0.8);
+  color: #fcd703;
+  
   margin-bottom: 30px;
 }
 
 /* ✅ Sub Headings */
 h2 {
-  color: #ffc46b;
-  text-shadow: 0 0 8px rgba(255, 196, 107, 0.6);
+  color: #fcd703;
+  
   margin-top: 40px;
   font-size: 28px;
 }
@@ -96,7 +96,7 @@ h2 {
 /* ✅ Cards */
 .card {
   width: 100%;
-  border: 2px solid #ffc46b;
+  border: 2px solid #ffd703;
   border-radius: 10px;
   padding: 20px;
   margin: 30px 0;
@@ -121,9 +121,8 @@ ul li {
 
 /* ✅ Email Link */
 .email {
-  color: #ffc46b;
-  text-decoration: none;
-  text-shadow: 0 0 6px rgba(255, 196, 107, 0.7);
+  color: #fcd703;
+  text-decoration: none; 
   font-weight: bold;
   word-break: break-word;
 }
@@ -285,8 +284,7 @@ ul li {
     box-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
 }
 .footer-social p{
-    color: #ffc46b;
-    text-shadow: 0 0 12px rgba(255, 196, 107, 0.8);
+   color: #fcd703;
     font-size: 20px;
     text-decoration: underline;
 }
