--- a/contactus.css
+++ b/contactus.css
@@ -219,7 +219,7 @@ h1 {
     background: #111;
     margin: 0 8px;
     font-size: 20px;
-    color: #ffd700;
+    color:white;
     border: 1px solid #333;
     transition: 0.3s;
     text-decoration: none;
@@ -227,7 +227,7 @@ h1 {
 
 .social-icons a:hover {
     background: #ffd703;
-    color: #000;
+    color: white;
     box-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
 }
 .footer-social p{
