--- a/styles_careers.css
+++ b/styles_careers.css
@@ -586,7 +586,7 @@ h2::after {
     background: #111;
     margin: 0 8px;
     font-size: 20px;
-    color: #ffd700;
+    color: white;;
     border: 1px solid #333;
     transition: 0.3s;
     text-decoration: none;
@@ -594,7 +594,7 @@ h2::after {
 
 .social-icons a:hover {
     background: #ffd700;
-    color: #000;
+    color: white;;
     box-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
 }
 .footer-social p{
