--- a/about.css
+++ b/about.css
@@ -487,7 +487,7 @@ body{
     background: #111;
     margin: 0 8px;
     font-size: 20px;
-    color: #ffd700;
+    color: white;;
     border: 1px solid #333;
     transition: 0.3s;
     text-decoration: none;
@@ -495,7 +495,7 @@ body{
 
 .social-icons a:hover {
     background: #ffd700;
-    color: #000;
+    color: white;
     box-shadow: 0 0 20px rgba(255, 215, 0, 0.6);
 }
 .footer-social p{
