--- a/style_sample_1.css
+++ b/style_sample_1.css
@@ -128,7 +128,7 @@ animation: slideInBtn 0.6s ease-out forwards, pulse 2s infinite 0.6s, glow 2s ea
 .header-gradient > div:nth-child(3) {
   width: 75%;
   height: 75%;
-  background: #ede881;
+  background: #eae142;
   bottom: -20%;
   right: -15%;
   animation-delay: -6s;
