--- a/styleservices.css
+++ b/styleservices.css
@@ -81,7 +81,7 @@ header {
 .header-gradient > div:nth-child(3) {
   width: 75%;
   height: 75%;
-  background: #ede881;
+  background: #eae142;
   bottom: -20%;
   right: -15%;
   animation-delay: -6s;
@@ -130,16 +130,6 @@ header {
   }
 }
 
-.logo {
-    color: #fff;
-    font-size: 24px;
-    font-weight: 700;
-}
-
-.logo img {
-    height: 40px; /* Ensure logo scales well */
-    width: auto;
-}
 
 .nav-links {
     list-style: none;
