--- a/about.css
+++ b/about.css
@@ -2,6 +2,10 @@
 
 body{
     background-color: #000;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    color: #fff;
 }
 
 /* ----------------------------------------------------------------- */
@@ -25,14 +29,13 @@ body{
 .main-header {
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 60px;     /* matches your left sidebar width */
+    width: calc(100% - 60px);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px 10px 24px;
+    padding: 8px 20px;
     background: rgba(23, 22, 31, 0.95);
-    margin-left: 30px;
     backdrop-filter: blur(10px);
     z-index: 999;
 }
@@ -45,8 +48,8 @@ body{
     background: rgba(17, 17, 24, 0.45);  /* transparent */
     backdrop-filter: blur(10px);         /* glass effect */
     padding: 10px 20px 10px 100px;
-    height: 60px;
-    gap: 40px;
+    height: 40px;
+    gap: 20px;
     position: relative;
     overflow: hidden;
 }
@@ -147,51 +150,12 @@ body{
     transform: translate(0px, 0px) scale(1);
   }
 }
-
-
-
-.header-logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.header-logo img {
-    width: 45px;
-}
-
-.brand-name {
-    font-size: 18px;
-    color: white;
-}
-
-
-
-
-.navbar {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #0f0f16;
-    padding: 50px 20px 5px 100px;
-    height: 60px;
-    gap: 40px;
-    ;
-}
-
-.logo img {
-    height: 40px;
-    width: auto;
-    margin-left: -80px;
-    margin-right: 10px;
-}
-
 .nav-links {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: 30px;
+    gap: 20px;
 }
 
 .nav-links li a {
@@ -207,9 +171,39 @@ body{
 
 
 
+ 
+    #particles-js {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
 
+ .header-nav {
+        display: flex;
+        gap: 20px;
+        margin-left: 60px;
+        height: 40px;
+        width: 100%;
+        
 
+    }
+    .header-nav a {
+    font-size: 16px;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.3s;
+      padding: 0;
+    line-height: 1;    /* remove big padding */
+}
 
+    .header-nav a:hover {
+        color: #fcd703;
+    }
+
+ 
 /* ----------------------------------------------------------------- */
 /* --- Global & Mobile-First Styling (Default for small screens) --- */
 /* ----------------------------------------------------------------- */
