--- a/styles_careers.css
+++ b/styles_careers.css
@@ -96,7 +96,7 @@ body {
 .header-gradient > div:nth-child(3) {
   width: 75%;
   height: 75%;
-  background: #ede881;
+  background: #eae142;
   bottom: -20%;
   right: -15%;
   animation-delay: -6s;
