--- a/style_sample_1.css
+++ b/style_sample_1.css
@@ -100,7 +100,7 @@ overflow: visible;
 
 section.what-section h2.what-heading {
 color: #fcd703;
-font-family: Helvetica, Arial, sans-serif;
+font-family: 'Lora', serif;
 font-size: 36px;
 margin: 0 auto 40px;
 text-align: center;
